upload ppt and update files

--- a/Activity 2 Part 2/Activity 2 Part 2.ipynb
+++ b/Activity 2 Part 2/Activity 2 Part 2.ipynb
@@ -5,15 +5,11 @@
    "id": "be7a2c50",
    "metadata": {},
    "source": [
-    "# Activity 2 Part 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "311a975b",
-   "metadata": {},
-   "source": [
-    "import numpy as n"
+    "# Activity 2 Part 2\n",
+    "\n",
+    "Mary Franczine Tan <br>\n",
+    "Applied Physics 157 WFY-WFX-1 <br>\n",
+    "Submitted March 25, 2023"
    ]
   },
   {
